--- a/sample-cnfs/sample_valid_selinux_options/manifests/pod.yml
+++ b/sample-cnfs/sample_valid_selinux_options/manifests/pod.yml
@@ -14,7 +14,7 @@ metadata:
   namespace: cnfspace
 spec:
   containers:
-  - image: bitnami/nginx:latest
+  - image: bitnamilegacy/nginx:latest
     name: nginx
     command:
       - /opt/bitnami/scripts/nginx/entrypoint.sh
