--- a/sample-cnfs/sample_secret_env/postgresql/values.yaml
+++ b/sample-cnfs/sample_secret_env/postgresql/values.yaml
@@ -10,11 +10,11 @@ global:
 #   storageClass: myStorageClass
 
 ## Bitnami PostgreSQL image version
-## ref: https://hub.docker.com/r/bitnami/postgresql/tags/
+## ref: https://hub.docker.com/r/bitnamilegacy/postgresql/tags/
 ##
 image:
   registry: docker.io
-  repository: bitnami/postgresql
+  repository: bitnamilegacy/postgresql
   tag: 11.10.0-debian-10-r24
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -50,7 +50,7 @@ volumePermissions:
   enabled: false
   image:
     registry: docker.io
-    repository: bitnami/minideb
+    repository: bitnamilegacy/minideb
     tag: buster
     ## Specify a imagePullPolicy
     ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -753,7 +753,7 @@ metrics:
 
   image:
     registry: docker.io
-    repository: bitnami/postgres-exporter
+    repository: bitnamilegacy/postgres-exporter
     tag: 0.8.0-debian-10-r293
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
