bitnami -> bitnamilegacy (part 3)
Signed-off-by: Cédric Ollivier <cedric.ollivier@orange.com>

--- a/sample-cnfs/ndn-non-root-user/manifests/pod.yml
+++ b/sample-cnfs/ndn-non-root-user/manifests/pod.yml
@@ -14,7 +14,7 @@ metadata:
   namespace: nginx-stuff
 spec:
   containers:
-  - image: bitnami/nginx:1.20
+  - image: bitnamilegacy/nginx:1.20
     name: main-container
     command:
       - /opt/bitnami/scripts/nginx/entrypoint.sh
