--- a/sample-cnfs/sample_latest_tag/manifests/pod.yml
+++ b/sample-cnfs/sample_latest_tag/manifests/pod.yml
@@ -14,7 +14,7 @@ metadata:
   namespace: nginx-stuff
 spec:
   containers:
-  - image: bitnami/nginx:latest
+  - image: bitnamilegacy/nginx:latest
     name: nginx
     command:
       - /opt/bitnami/scripts/nginx/entrypoint.sh
