--- a/sample-cnfs/sample-hostpath/manifests/pod.yml
+++ b/sample-cnfs/sample-hostpath/manifests/pod.yml
@@ -14,7 +14,7 @@ metadata:
   namespace: cnfspace
 spec:
   containers:
-  - image: bitnami/nginx:1.20
+  - image: bitnamilegacy/nginx:1.20
     name: nginx
     command:
       - /opt/bitnami/scripts/nginx/entrypoint.sh
