--- a/sample-cnfs/sample-nonroot-containers/manifests/pod.yml
+++ b/sample-cnfs/sample-nonroot-containers/manifests/pod.yml
@@ -17,7 +17,7 @@ spec:
     runAsNonRoot: true
 
   containers:
-  - image: bitnami/nginx:1.20
+  - image: bitnamilegacy/nginx:1.20
     name: nginx
     command:
       - /opt/bitnami/scripts/nginx/entrypoint.sh
