--- a/sample-cnfs/sample-immutable-fs/manifests/pod.yml
+++ b/sample-cnfs/sample-immutable-fs/manifests/pod.yml
@@ -20,7 +20,7 @@ spec:
     emptyDir: {}
 
   containers:
-  - image: bitnami/nginx:1.20
+  - image: bitnamilegacy/nginx:1.20
     name: nginx
     command:
       - /opt/bitnami/scripts/nginx/entrypoint.sh
