Migrate bitnami to bitnamilegacy
It updates all Chart values and cnf-testsuite.yml to migrate
from bitnami to bitnamilegacy.
Please see https://github.com/bitnami/charts/issues/35164

Co-authored-by: Cédric Ollivier <cedric.ollivier@orange.com>
Signed-off-by: Lucia Sirova <lucia.sirova@tietoevry.com>

--- a/embedded_files/fluentd-bitnami-values.yml
+++ b/embedded_files/fluentd-bitnami-values.yml
@@ -1,2 +1,11 @@
 aggregator:
   enabled: false
+
+image:
+  registry: docker.io
+  repository: bitnamilegacy/fluentd
+  tag: 1.19.0-debian-12-r1
+
+global:
+  security:
+    allowInsecureImages: true
