--- a/sample-cnfs/sample_stuck_helm_deployment/cnf-testsuite.yml
+++ b/sample-cnfs/sample_stuck_helm_deployment/cnf-testsuite.yml
@@ -7,3 +7,4 @@ deployments:
     helm_chart_name: nginx
     helm_repo_name: bitnami
     helm_repo_url: https://charts.bitnami.com/bitnami
+    helm_values: --set global.security.allowInsecureImages=true --set image.repository=bitnamilegacy/nginx
