--- a/sample-cnfs/sample-multi-db-connections-fail/wordpress/charts/memcached/values.yaml
+++ b/sample-cnfs/sample-multi-db-connections-fail/wordpress/charts/memcached/values.yaml
@@ -50,7 +50,7 @@ extraDeploy: []
 ##
 image:
   registry: docker.io
-  repository: bitnami/memcached
+  repository: bitnamilegacy/memcached
   tag: 1.6.12-debian-10-r50
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -319,7 +319,7 @@ metrics:
   ##
   image:
     registry: docker.io
-    repository: bitnami/memcached-exporter
+    repository: bitnamilegacy/memcached-exporter
     tag: 0.9.0-debian-10-r221
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
@@ -472,7 +472,7 @@ volumePermissions:
   ##
   image:
     registry: docker.io
-    repository: bitnami/bitnami-shell
+    repository: bitnamilegacy/bitnami-shell
     tag: 10-debian-10-r260
     ## Specify a imagePullPolicy
     ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
