--- a/sample-cnfs/sample-tracing/jaeger/charts/kafka/charts/zookeeper/values.yaml
+++ b/sample-cnfs/sample-tracing/jaeger/charts/kafka/charts/zookeeper/values.yaml
@@ -13,7 +13,7 @@
 ##
 image:
   registry: docker.io
-  repository: bitnami/zookeeper
+  repository: bitnamilegacy/zookeeper
   tag: 3.7.0-debian-10-r56
 
   ## Specify a imagePullPolicy
@@ -66,7 +66,7 @@ volumePermissions:
   enabled: false
   image:
     registry: docker.io
-    repository: bitnami/bitnami-shell
+    repository: bitnamilegacy/bitnami-shell
     tag: 10-debian-10-r97
     pullPolicy: Always
     ## Optionally specify an array of imagePullSecrets.
