--- a/sample-cnfs/sample_multiple_deployments/nginx/values.yaml
+++ b/sample-cnfs/sample_multiple_deployments/nginx/values.yaml
@@ -79,7 +79,7 @@ diagnosticMode:
 ##
 image:
   registry: docker.io
-  repository: bitnami/nginx
+  repository: bitnamilegacy/nginx
   tag: 1.27.2-debian-12-r1
   digest: ""
   ## Specify a imagePullPolicy
@@ -506,7 +506,7 @@ cloneStaticSiteFromGit:
   ##
   image:
     registry: docker.io
-    repository: bitnami/git
+    repository: bitnamilegacy/git
     tag: 2.47.0-debian-12-r0
     digest: ""
     ## Specify a imagePullPolicy
@@ -947,7 +947,7 @@ metrics:
   ##
   image:
     registry: docker.io
-    repository: bitnami/nginx-exporter
+    repository: bitnamilegacy/nginx-exporter
     tag: 1.3.0-debian-12-r7
     digest: ""
     pullPolicy: IfNotPresent
