Update the docker tags which are unavailable in the bitnamilegacy repo
   repository: bitnamilegacy/postgresql
-  tag: 11.10.0-debian-10-r24
+  tag: 11.10.0

   repository: bitnamilegacy/wordpress
-  tag: 5.8.2-debian-10-r34
+  tag: 5.8.2

   repository: bitnamilegacy/mariadb
-  tag: 10.5.13-debian-10-r0
+  tag: 10.5.13

It also fixes spec/fixtures/fluentd-values-bad.yml to leverage
the new bitnamilegacy repo [1].

[1] https://github.com/bitnami/charts/issues/35164

Co-authored-by: Lucia Sirova <lucia.sirova@tietoevry.com>
Signed-off-by: Cédric Ollivier <cedric.ollivier@orange.com>

--- a/spec/fixtures/fluentd-values-bad.yml
+++ b/spec/fixtures/fluentd-values-bad.yml
@@ -1,3 +1,8 @@
+global:
+  security:
+    allowInsecureImages: true
+image:
+  repository: bitnamilegacy/fluentd
 aggregator:
   enabled: false
 forwarder:
