--- a/sample-cnfs/ndn-multi-db-connections-fail/wordpress/charts/mariadb/values.yaml
+++ b/sample-cnfs/ndn-multi-db-connections-fail/wordpress/charts/mariadb/values.yaml
@@ -70,7 +70,7 @@ diagnosticMode:
 image:
   registry: docker.io
   repository: bitnamilegacy/mariadb
-  tag: 10.5.13-debian-10-r0
+  tag: 10.5.13
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
