--- a/sample-cnfs/sample-multi-db-connections-fail/wordpress/values.yaml
+++ b/sample-cnfs/sample-multi-db-connections-fail/wordpress/values.yaml
@@ -69,7 +69,7 @@ diagnosticMode:
 image:
   registry: docker.io
   repository: bitnamilegacy/wordpress
-  tag: 5.8.2-debian-10-r34
+  tag: 5.8.2
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: https://kubernetes.io/docs/user-guide/images/#pre-pulling-images
