Upgrade Helm and migrate from bitnami to bitnamilegacy
It also removes a few debugs in the spec tests.

Signed-off-by: Cédric Ollivier <cedric.ollivier@orange.com>

--- a/sample-cnfs/sample_oci_repo/cnf-testsuite.yml
+++ b/sample-cnfs/sample_oci_repo/cnf-testsuite.yml
@@ -12,3 +12,4 @@ deployments:
       registry_url: "oci://localhost:53123/helm/nginx"
       chart_version: "15.10.0"
       plain_http: true
+      helm_values: --set global.security.allowInsecureImages=true --set image.repository=bitnamilegacy/nginx
