--- a/sample-cnfs/sample_stuck_finalizer/manifest/stuck-pod.yaml
+++ b/sample-cnfs/sample_stuck_finalizer/manifest/stuck-pod.yaml
@@ -1,3 +1,12 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cnfspace
+  labels:
+    pod-security.kubernetes.io/enforce: privileged
+
+---
 apiVersion: v1
 kind: Pod
 metadata:
